# resikno-mac

./: .gitignore  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  USER_GUIDE.md  install.sh
.claude/: settings.local.json
Formula/: resikno.rb
docs/: TUI_DESIGN.md  decisions.md  future-plans.md
docs/plans/: 2026-01-24-resikno-mak-prd.md
docs/superpowers/plans/: 2026-03-28-make-features-work.md
docs/superpowers/specs/: 2026-03-28-resikno-mac-improvements-design.md
src/: main.rs
src/cleaner/: backup.rs  delete.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/scanner/: cache.rs  duplicates.rs  large_files.rs  mod.rs
src/shell/: mod.rs  welcome.rs
src/ui/: charts.rs  colors.rs  mod.rs  tree.rs
