[package]
name = "resikno-mac"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A lightweight, transparent, and safe disk cleanup CLI tool"
license = "MIT"
repository = "https://github.com/esmondo/resikno-mac"
keywords = ["disk", "cleanup", "macos", "cli", "storage"]
categories = ["command-line-utilities", "filesystem"]

# Binary name (what users type in terminal)
[[bin]]
name = "resikno"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4", features = ["derive", "color"] }

# Interactive Shell (REPL)
rustyline = "12"    # Pinned for rustc 1.79 compatibility
home = ">=0.5.4, <0.5.12"  # Pinned to avoid edition 2024 requirements
shlex = "1.3"

# Interactive TUI
ratatui = "0.25"
crossterm = "0.27"

# File Operations
walkdir = "2"
sha2 = "0.10"
fs_extra = "1.3"

# Visualization & Colors
indicatif = "0.17"
console = "0.15"
tabled = "0.15"

# Async & Performance
rayon = ">=1.8, <1.11"  # Pinned for rustc 1.79 compatibility
rayon-core = ">=1.10, <1.13"  # Pinned for rustc 1.79 compatibility
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform Detection & Paths
cfg-if = "1"
directories = "5"

# Error Handling
anyhow = "1"
thiserror = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Human-readable sizes
bytesize = "1.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Safety: Forbid unsafe code (we don't need it)
[lints.rust]
unsafe_code = "forbid"

# Helpful warnings from clippy
[lints.clippy]
all = "warn"
pedantic = "warn"
# Allow some pedantic lints that are too strict
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
